Revise index.html for promotions layout and styling
Updated the HTML structure and styles for the promotions page.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TESTE</title>
-    <link rel="icon" href="minhaPomba.jpg">
-    <link rel="stylesheet" href="style.css">
+    <title>PROMOÇÕES</title>
+    <link rel="icon" href="logo_MB-removebg-preview.png">
+
+    <style>
+*{
+    background-color: rgb(14, 14, 14);;
+    padding: 0;
+}
+.teste{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 925px;
+    /* border: 1px solid red; */
+}
+    </style>
+
 </head>
 <body>
     <div  class="teste">
-    <img src="WhatsApp Image 2025-10-31 at 15.13.23 (2).jpeg" title="FODASEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE">
+    <img src="itensPromo.jpeg" title="ITENS PROMO">
     </div>
 </body>
 </html>
